Add power up time feature