@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.jakewharton.butterknife'
 
 version="2020.1.27"
 
@@ -33,10 +34,35 @@ android
 
 dependencies
 {
-//   compile 'com.google.code.gson:gson:2.8.5'
-  compile 'com.google.protobuf:protobuf-java:3.4.0'
-//   compile 'com.upokecenter:cbor:4.4.4'
+  implementation 'com.upokecenter:cbor:4.4.4'
+  implementation 'com.google.protobuf:protobuf-java:3.4.0'
+  implementation 'com.jakewharton:butterknife:10.2.3'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
+  implementation 'com.github.hxcan:CodePosition:2023.3.29'
   implementation 'org.apache.commons:commons-io:1.3.2'
   implementation group: 'com.koushikdutta.async', name: 'androidasync', version: '2.1.7'
 //   implementation 'com.android.support:appcompat-v7:28.0.0'
+}
+
+// # https://stackoverflow.com/questions/65380359/lomboks-access-to-jdk-compilers-internal-packages-incompatible-with-java-16
+
+// # enable internal JDK API access at runtime
+tasks.withType(JavaCompile).configureEach {
+    options.fork = true
+    options.forkOptions.jvmArgs += [
+//         # essential for butterknife
+        '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+
+//         # if you need Glide or LomBok
+//         # these may not be the exact list, but it works for me
+        '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
+    ]
 }
